--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -11,4 +11,5 @@ const title = 'Cantoverse Gallery';
       <Game client:load />
     </div>
   </div>
+  <script is:inline src="/web3/index.js"></script>
 </Layout>
