--- a/src/pages/mint.astro
+++ b/src/pages/mint.astro
@@ -7,6 +7,6 @@ const title = 'Cantoverse NFT Mint';
 
 <Layout meta={{ title }}>
   <div class="flex justify-center">
-    <Home client:load />
+    <Home client:only />
   </div>
 </Layout>
