--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-import Game from '~/components/Entercnatoverse';
 
 const title = 'Cantoverse Gallery';
 ---
@@ -8,8 +7,10 @@ const title = 'Cantoverse Gallery';
 <Layout meta={{ title }}>
   <div class="container flex flex-col items-center justify-center px-5 mx-auto my-8">
     <div class="flex justify-center items-center h-screen">
-      <Game client:load />
+      <iframe
+        src="https://gateway.lighthouse.storage/ipfs/QmPSp7KEpaqjgDJYkvoGhhJJ86yTh7VNTzN2wynWaV7h7A/"
+        width="1100"
+        height="700"></iframe>
     </div>
   </div>
-  <script is:inline src="/web3/index.js"></script>
 </Layout>
